# moonraker-telegram-bot

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile-dev  Dockerfile-mjpeg  pyproject.toml
.github/workflows/: ci.yaml
bot/: camera.py  configuration.py  klippy.py  main.py  notifications.py  telegram_helper.py  timelapse.py  websocket_helper.py
bot/assets/: ffmpegcv_custom.py
scripts/: install.sh  requirements.dev.txt  requirements.docker.mjpeg.txt  requirements.txt  uninstall.sh
tests/: configuration_test.py  klippy_test.py
tests/resources/: telegram_startup.conf
