[project]
name = "moonraker-telegram-bot"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==25.1.0",
    "apscheduler==3.11.2",
    "emoji==2.15.0",
    "ffmpegcv==0.3.18",
    "httpx==0.28.1",
    "orjson==3.10.14; python_version=='3.9'",
    "orjson==3.11.7; python_version>='3.10'",
    "pillow==10.4.0; python_version=='3.9'",
    "pillow==12.1.1; python_version>='3.10'",
    "python-telegram-bot[callback-data,http2,job-queue,rate-limiter,socks]==22.5; python_version=='3.9'",
    "python-telegram-bot[callback-data,http2,job-queue,rate-limiter,socks]==22.6; python_version>='3.10'",
    "uvloop==0.22.1; platform_system!='Windows'",
    "websockets==15.0.1; python_version=='3.9'",
    "websockets==16.0; python_version>='3.10'",
]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "memory-profiler==0.61.0",
    "mypy==1.15.0; python_version=='3.9'",
    "mypy==1.19.1; python_version>='3.10'",
    "opencv-python~=4.11.0.86",
    "prek==0.3.4",
    "psutil==7.2.2",
    "pyproject-fmt>=2.18.0; python_version>='3.10'",
    "pytest==8.3.5; python_version=='3.9'",
    "pytest==9.0.2; python_version>='3.10'",
    "pytest-asyncio==0.25.3; python_version=='3.9'",
    "pytest-asyncio==1.3.0; python_version>='3.10'",
    "ruff==0.15.5",
    "types-aiofiles==25.1.0.20251011",
    "types-cachetools==6.2.0.20251022",
    "types-emoji==2.1.0.3",
    "types-orjson==3.6.2",
    "types-pillow==10.2.0.20240822",
    "types-pytz==2025.2.0.20251108",
    "types-setuptools==81.0.0.20260209",
    "typing-extensions==4.15.0",
]
docker-dev = [
    "line-profiler==5.0.2",
    "memory-profiler==0.61.0",
    "memray==1.19.1",
]
docker-opencv = [
    "opencv-python~=4.11.0.86",
]

[tool.ruff]
target-version = "py39"
line-length = 200
[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FLY",  # flynt
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "LOG",  # flake8-logging
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLW",  # pylint warning
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "W",    # pycodestyle warnings
]
ignore = [
    "E501",    # line length handled by formatter
    "PERF203", # try-except in loop — intentional error handling
    "RUF006",  # fire-and-forget asyncio task — existing pattern
    "SIM108",  # ternary — would produce very long lines
]
[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = [
    "camera",
    "configuration",
    "klippy",
    "notifications",
    "timelapse",
    "websocket_helper",
    "telegram_helper",
]

[tool.codespell]
skip = "uv.lock"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = [ "tests" ]

[tool.mypy]
python_version = "3.9"
no_namespace_packages = true
exclude = "tests"
strict = true
enable_error_code = [ "ignore-without-code" ]
